# barcode_recognition

./: CMakeLists.txt  README.md
source/: detect.cpp  detect.h  main.cpp  tools.cpp  tools.h
